--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -5,48 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site Plan – Artisanat RDC</title>
-    <link rel="stylesheet" href="styles.css" />
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #fefaf6;
-            color: #222;
-            padding: 20px;
-            line-height: 1.6;
-        }
-
-        h1,
-        h2 {
-            color: #5a3e2b;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        section {
-            margin-bottom: 40px;
-        }
-
-        .color-box {
-            display: inline-block;
-            width: 100px;
-            height: 40px;
-            margin-right: 10px;
-            border: 1px solid #ccc;
-            line-height: 40px;
-            text-align: center;
-            font-weight: bold;
-        }
-
-        .wireframes img {
-            max-width: 100%;
-            height: auto;
-            border: 1px solid #ccc;
-            margin-top: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/wireframe.css" />
+   
 </head>
 
 <body>
