--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -1,77 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site Plan – Artisanat RDC</title>
-    <link rel="stylesheet" href="styles/wireframe.css" />
-   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kiese – Galerie d'œuvres</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <h1>Site Plan – Kiese</h1>
+  <header>
+    <h1>Kiese</h1>
+    <p>Un voyage visuel au cœur de l’artisanat congolais</p>
+  </header>
 
-    <section>
-        <h2>Site Name</h2>
-        <p><strong>Name:</strong>Kiese</p>
-        <p>"Kiese" comes from the Kikongo language and means "joy". This name reflects the positive impact of local
-            craftsmanship on individuals and communities in the Democratic Republic of Congo. It emphasizes the pride,
-            creativity, and happiness that come from valuing and sharing cultural talents.</p>
-    </section>
+  <section class="gallery-intro">
+    <p>Bienvenue dans notre galerie ! Chaque œuvre raconte une histoire de tradition, d'héritage, et de joie – <strong>Kiese</strong>.</p>
+  </section>
 
-    <section>
-        <h2>Site Purpose</h2>
-        <p>Craftsmanship is a key sector of the economy in the DRC, offering employment opportunities and promoting
-            cultural heritage. This website aims to raise awareness, promote, and encourage local entrepreneurship by
-            highlighting Congolese talent.</p>
-    </section>
+  <section class="gallery">
+    <div class="art-card">
+      <img src="images/tissage.jpg" alt="Tissage Kasaïen">
+      <h2>Tissage Kasaïen</h2>
+      <p>Tapis en fibres naturelles, motif géométrique Luba.</p>
+      <span>Artisan : Maman Elise</span>
+      <a href="/contact?artisan=maman-elise" class="contact-btn">Contacter l’artisan</a>
+    </div>
 
-    <section>
-        <h2>Scenarios</h2>
-        <ul>
-            <li>Where can I discover traditional handmade crafts from the Democratic Republic of Congo?</li>
-    <li>How can I contact a featured artisan to purchase their products?</li>
-    <li>What are the different types of Congolese craftsmanship and their cultural significance?</li>
-    <li>Are there upcoming artisan fairs or exhibitions in the region?</li>
-    <li>How does Kiese support local artisans and promote their work?</li>
-    <li>Can I submit my own craftwork to be featured on the site?</li>
-    <li>Is there a gallery or portfolio showcasing artisan creations?</li>
-  </ul>
-        </ul>
-    </section>
+    <div class="art-card">
+      <img src="images/sculpture.jpg" alt="Sculpture en bois de wenge">
+      <h2>Sculpture en bois de wenge</h2>
+      <p>Couple royal sculpté à la main.</p>
+      <span>Artisan : Atelier Mwene</span>
+      <a href="/contact?artisan=atelier-mwene" class="contact-btn">Contacter l’artisan</a>
+    </div>
 
-    <section>
-        <h2>Color Schema</h2>
-        <p>These colors were chosen to represent authenticity, natural elements, and cultural warmth:</p>
-        <div class="color-box" style="background-color: #5a3e2b; color: white;">#5a3e2b</div>
-        <span>→ Used for headers and titles</span><br /><br />
-        <div class="color-box" style="background-color: #fefaf6;">#fefaf6</div>
-        <span>→ Background color</span><br /><br />
-        <div class="color-box" style="background-color: #d4a373;">#d4a373</div>
-        <span>→ Accent elements, buttons</span>
-    </section>
+    <div class="art-card">
+      <img src="images/bijoux.jpg" alt="Collier perlé Mongo">
+      <h2>Collier perlé Mongo</h2>
+      <p>Perles recyclées, porté lors des cérémonies.</p>
+      <span>Artisan : Bijouterie Londo</span>
+      <a href="/contact?artisan=bijouterie-londo" class="contact-btn">Contacter l’artisan</a>
+    </div>
 
-    <section>
-        <h2>Typography</h2>
-        <ul>
-            <li><strong>Arial (sans-serif)</strong> — Used for body text (clean and readable)</li>
-            <li><strong>Georgia (serif)</strong> — Used for headings (adds an elegant, handcrafted touch)</li>
-        </ul>
-    </section>
-
-    <section class="wireframes">
-        <h2>Wireframes</h2>
-        <p>Below are the layout sketches of the homepage:</p>
-
-        <h3>Mobile View</h3>
-        <img src="images/Homepage.png" alt="Mobile wireframe" />
-
-        <h3>Desktop View</h3>
-        <img src="images/Capture d’écran 2025-04-05 065731.png" alt="Desktop wireframe" />
-    </section>
+    <div class="art-card">
+      <img src="images/poterie.jpg" alt="Pot en argile de Nsalasani">
+      <h2>Pot en argile de Nsalasani</h2>
+      <p>Poterie traditionnelle cuite au feu.</p>
+      <span>Artisan : Collectif Maboko</span>
+      <a href="/contact?artisan=collectif-maboko" class="contact-btn">Contacter l’artisan</a>
+    </div>
+  </section>
 
 </body>
-
 </html>
